--- a/Loconav.ipynb
+++ b/Loconav.ipynb
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### I have only worked with classification problems till now, So the solution may not be good. I have done what I have understood from the problem that is to remove errors and noisy data from the datasets for the predictions.\n",
+    "### I have only worked with classification problems till now, So the solution may not be good. I have done what I have understood from the problem that is to remove errors and noisy data from the datasets for the predictions. I can learn as early as possible.\n",
     "\n",
     "### Please share your views if  possible"
    ]
